# jc

./: .gitignore  ARCHITECTURE.md  BUILD.md  LICENSE  Makefile.am  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  autogen.sh  configure.ac
src/: Makefile.am  cmd_add.c  cmd_bt.c  cmd_build.c  cmd_clean.c  cmd_install.c  cmd_new.c  cmd_run.c  cmd_test.c  jc.h  main.c  utils.c  utils.h
src/templates/: README.md.template  configure.ac.template  main.c.template  src_Makefile.am.template
test_project/: configure.ac  test_utils.c
test_project/src/: Makefile.am
tests/: Makefile.am  test_main.cpp  test_utils.c  test_utils.cpp
